--- a/index.html
+++ b/index.html
@@ -6,41 +6,60 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+  <!-- GOOGLE FONT -->
   <link
     href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&family=Roboto:wght@300;400;500;700;900&display=swap"
     rel="stylesheet" />
-
+  <!-- BOOTSRAP -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js">
+
+  <!-- FONTAWESOME -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+
+  <!-- MAIN CSS -->
   <link rel="stylesheet" href="index.css">
   <title>Portofolio</title>
 </head>
 
 <body>
   <nav>
-    <div class="container align-items-center d-flex justify-content-end ">
-        <h1><a href="#">Vian.dev</a></h1>
-        <ul>
-          <li><a href="#"> HOME</a></li>
-          <li><a href="#"> ABOUT</a></li>
-          <li><a href="#"> PORTOFOLIO</a></li>
-          <li><a href="#"> CONTACT</a></li>
-        </ul>
+    <div class="navbar container-fluid align-items-center d-flex justify-content-end ">
+      <h1><a href="#">Vian.dev</a></h1>
+      <div class="list">
+      <ul>
+        <li><a href="#"> HOME</a></li>
+        <li><a href="#"> ABOUT</a></li>
+        <li><a href="#"> PORTOFOLIO</a></li>
+        <li><a href="#"> CONTACT</a></li>
+      </ul>
+    </div>
     </div>
   </nav>
   <div class="container greetings">
-  <div class="text-white">
-    <h4 class="">Hi, my name is</h4>
-    <h1>AL<span>VIAN</span> 
-    <br>MAULANA</h1>
-    <h4>I’m a Web Design</h4>
-    <div class="mt-5">
-    <button class="btn btn1">CONTACT INFO</button>
-    <button class="btn btn2">DOWNLOAD CV</button>
+    <div class="wrapper">
+    <div class="text-white">
+      <h4 class="">Hi, my name is</h4>
+      <h1>AL<span>VIAN</span>
+        <br>MAULANA
+      </h1>
+      <h4>I’m a Web Design</h4>
+    </div>
+      <div class="mt-5">
+        <button class="btn btn1 me-3">CONTACT INFO</button>
+        <button class="btn btn2">DOWNLOAD CV</button>
+      </div>
+      <div class="logo ">
+        <a href="#"><i class="fa-brands fa-linkedin me-3" style="color: #fff;"></i></a>
+        <a href="#"><i class="fa-brands fa-github "  style="color: #fff;"></i></a>
+      </div>
+      <img class="img" src="assets/WhatsApp Image 2024-03-28 at 12.46.30 AM.jpeg" alt="foto profile">
+    <!-- </div> -->
   </div>
-  </div>
-</div>
-</body>
-</body>
 
+  
+</body>
+</body>
+<script src="main.js"></script>
 </html>
