--- a/index.html
+++ b/index.html
@@ -28,38 +28,41 @@
     <div class="navbar container-fluid align-items-center d-flex justify-content-end ">
       <h1><a href="#">Vian.dev</a></h1>
       <div class="list">
-      <ul>
-        <li><a href="#"> HOME</a></li>
-        <li><a href="#"> ABOUT</a></li>
-        <li><a href="#"> PORTOFOLIO</a></li>
-        <li><a href="#"> CONTACT</a></li>
-      </ul>
-    </div>
+        <ul>
+          <li><a href="#"> HOME</a></li>
+          <li><a href="#"> ABOUT</a></li>
+          <li><a href="#"> PORTOFOLIO</a></li>
+          <li><a href="#"> CONTACT</a></li>
+        </ul>
+      </div>
     </div>
   </nav>
-  <div class="container greetings">
-    <div class="wrapper">
-    <div class="text-white">
-      <h4 class="">Hi, my name is</h4>
-      <h1>AL<span>VIAN</span>
-        <br>MAULANA
-      </h1>
-      <h4>I’m a Web Design</h4>
-    </div>
+  <div class="container greetings justify-content-start">
+    <div class="content">
+      <div class="text-white">
+        <h4 class="">Hi, my name is</h4>
+        <h1>AL<span>VIAN</span>
+          <br>MAULANA
+        </h1>
+        <h4>I’m a Web Design</h4>
+      </div>
       <div class="mt-5">
         <button class="btn btn1 me-3">CONTACT INFO</button>
         <button class="btn btn2">DOWNLOAD CV</button>
       </div>
       <div class="logo ">
         <a href="#"><i class="fa-brands fa-linkedin me-3" style="color: #fff;"></i></a>
-        <a href="#"><i class="fa-brands fa-github "  style="color: #fff;"></i></a>
+        <a href="#"><i class="fa-brands fa-github " style="color: #fff;"></i></a>
       </div>
+    </div>
+    <div class="gambar">
       <img class="img" src="assets/WhatsApp Image 2024-03-28 at 12.46.30 AM.jpeg" alt="foto profile">
-    <!-- </div> -->
+    </div>
+    <div class="lingkaran"></div>
   </div>
 
-  
-</body>
+
 </body>
 <script src="main.js"></script>
+
 </html>
