--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
       </div>
     </div>
   </nav>
+
+  <!-- profile section start -->
   <div class="container greetings justify-content-start">
     <div class="content">
       <div class="text-white">
@@ -46,20 +48,49 @@
         </h1>
         <h4>I’m a Web Design</h4>
       </div>
-      <div class="mt-5">
+      <div class="mt-5 button">
         <button class="btn btn1 me-3">CONTACT INFO</button>
         <button class="btn btn2">DOWNLOAD CV</button>
       </div>
       <div class="logo ">
-        <a href="#"><i class="fa-brands fa-linkedin me-3" style="color: #fff;"></i></a>
-        <a href="#"><i class="fa-brands fa-github " style="color: #fff;"></i></a>
+        <a href="https://linkedin.com/in/alvian-maulana-1118652b0" target="_blank"><i class="fa-brands fa-linkedin me-3" style="color: #fff;"></i></a>
+        <a href="https://github.com/AlvianMaulanaMansyur" target="_blank"><i class="fa-brands fa-github " style="color: #fff;"></i></a>
       </div>
     </div>
-    <div class="gambar">
-      <img class="img" src="assets/WhatsApp Image 2024-03-28 at 12.46.30 AM.jpeg" alt="foto profile">
+    <div class="profile">
+      <div class="border-img">
+        <img src="assets/profil.jpg" alt="">
+      </div>
+      <div class="text">
+      </div>
     </div>
-    <div class="lingkaran"></div>
   </div>
+  <!-- profile section end -->
+
+
+  <!-- ABOUT Section start -->
+  <div class="about container-fluid">
+    <div class="content">
+    <div class="about-pict">
+      <img src="assets/about.jpg" alt="">
+    </div>
+  </div>
+  <div class="text ">
+    <h5>Get To Know More</h5>
+    <h1>ABOUT ME</h1>
+    <br>
+    <h4 >I am a Software Engineering student living in Indonesia, especeally in Bali. I am someone with a passion for programming. I have a solid knowledge of HTML, CSS, Javascript, PHP, and some frameworks like CodeIgniter 3 and Bootstrap 5. So far, I have been dedicated to continuously learning new technologies. 
+      My interest lies in creating and designing responsive and attractive websites. Additionally, I possess good communication skills that are valuable for working in a team. I’m a freelance student and now i am looking forwards to working with you! </h4>
+      <div class="button">
+        <button class="btn btn2">Email Me!</button>
+        <a href="https://linkedin.com/in/alvian-maulana-1118652b0" target="_blank"><i class="fa-brands fa-linkedin me-3" style="color: #fff;"></i></a>
+        <a href="https://github.com/AlvianMaulanaMansyur" target="_blank"><i class="fa-brands fa-github " style="color: #fff;"></i></a>
+      </div>
+  </div>
+    <!-- <img src="assets/about.jpg" alt=""> -->
+  </div>
+  <!-- ABOUT Section end -->
+
 
 
 </body>
