about, contact, footer

--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
         <button class="btn btn2">DOWNLOAD CV</button>
       </div>
       <div class="logo ">
-        <a href="https://linkedin.com/in/alvian-maulana-1118652b0" target="_blank"><i class="fa-brands fa-linkedin me-3" style="color: #fff;"></i></a>
-        <a href="https://github.com/AlvianMaulanaMansyur" target="_blank"><i class="fa-brands fa-github " style="color: #fff;"></i></a>
+        <a href="https://linkedin.com/in/alvian-maulana-1118652b0" target="_blank"><i class="fa-brands fa-linkedin me-3"
+            style="color: #fff;"></i></a>
+        <a href="https://github.com/AlvianMaulanaMansyur" target="_blank"><i class="fa-brands fa-github "
+            style="color: #fff;"></i></a>
       </div>
     </div>
     <div class="profile">
@@ -71,29 +73,113 @@
   <!-- ABOUT Section start -->
   <div class="about container-fluid">
     <div class="content">
-    <div class="about-pict">
-      <img src="assets/about.jpg" alt="">
-    </div>
-  </div>
-  <div class="text ">
-    <h5>Get To Know More</h5>
-    <h1>ABOUT ME</h1>
-    <br>
-    <h4 >I am a Software Engineering student living in Indonesia, especeally in Bali. I am someone with a passion for programming. I have a solid knowledge of HTML, CSS, Javascript, PHP, and some frameworks like CodeIgniter 3 and Bootstrap 5. So far, I have been dedicated to continuously learning new technologies. 
-      My interest lies in creating and designing responsive and attractive websites. Additionally, I possess good communication skills that are valuable for working in a team. I’m a freelance student and now i am looking forwards to working with you! </h4>
-      <div class="button">
-        <button class="btn btn2">Email Me!</button>
-        <a href="https://linkedin.com/in/alvian-maulana-1118652b0" target="_blank"><i class="fa-brands fa-linkedin me-3" style="color: #fff;"></i></a>
-        <a href="https://github.com/AlvianMaulanaMansyur" target="_blank"><i class="fa-brands fa-github " style="color: #fff;"></i></a>
+      <div class="about-pict">
+        <img src="assets/about.jpg" alt="">
       </div>
-  </div>
-    <!-- <img src="assets/about.jpg" alt=""> -->
+    </div>
+    <div class="text ">
+      <h5>Get To Know More</h5>
+      <h1>ABOUT ME</h1>
+      <br>
+      <h4>I am a Software Engineering student living in Indonesia, especeally in Bali. I am someone with a passion for
+        programming. I have a solid knowledge of HTML, CSS, Javascript, PHP, and some frameworks like CodeIgniter 3 and
+        Bootstrap 5. So far, I have been dedicated to continuously learning new technologies.
+        My interest lies in creating and designing responsive and attractive websites. Additionally, I possess good
+        communication skills that are valuable for working in a team. I’m a freelance student and now i am looking
+        forwards to working with you! </h4>
+      <div class="button">
+        <button class="btn btn1 px-4">Email Me!</button>
+        <a href="https://linkedin.com/in/alvian-maulana-1118652b0" target="_blank"><i class="fa-brands fa-linkedin me-3"
+            style="color:black;"></i></a>
+        <a href="https://github.com/AlvianMaulanaMansyur" target="_blank"><i class="fa-brands fa-github "
+            style="color: black;"></i></a>
+      </div>
+    </div>
   </div>
   <!-- ABOUT Section end -->
 
+  <!-- TECT STACK start -->
+  <div class="tect-stack">
+    <h4 class="text-white text-center mt-5 mb-4">TECH STACK</h4>
+    <div class="logo-tect container  d-flex justify-content-center flex-wrap " style="gap: 10%;">
+      <div class="html">
+        <i class="fa-brands fa-html5" style="color: #ffffff;"></i>
+        <p class="text-white text-center">HTML</p>
+      </div>
+      <div class="css">
+        <i class="fa-brands fa-css3-alt" style="color: #ffffff;"></i>
+        <p class="text-white text-center">CSS</p>
+      </div>
+      <div class="php">
+        <i class="fa-brands fa-php" style="color: #ffffff;"></i>
+        <p class="text-white text-center">PHP</p>
+      </div>
+      <div class="js">
+        <i class="fa-brands fa-js" style="color: #ffffff;"></i>
+        <p class="text-white text-center">Javascript</p>
+      </div>
+      <div class="ci">
+        <span class="simple-icons--codeigniter"></span>
+        <p class="text-white text-center">CodeIgniter</p>
+      </div>
+      <div class="bootstrap">
+        <i class="fa-brands fa-bootstrap" style="color: #ffffff;"></i>
+        <p class="text-white text-center">Bootstrap</p>
+      </div>
+    </div>
+  </div>
+  <!-- TECT STACK end -->
+
+  <!-- PORTOFOLIO START -->
+  <div class="portofolio mt-5">
+    <div class="teks">
+      <h5>THIS IS MY</h5>
+      <h1>PORTOFOLIO</h1>
+    </div>
+    <div class="project d-flex mt-5">
+        <img src="assets/ecommerce.JPG" alt="">
+        <div class="detail text-center">
+          <p>Bali Nirvna Computer  E-Commerce</p>
+          <p>"Bali Nirvana Computer" is an e-commerce website created to reach a wider range of buyers and enhance sales effectiveness. This website sells various electronic products ranging from laptops, computers, printers, ink, etc.</p>
+          <div class="d-flex justify-content-center gap-4">
+            <button class="btn btn1 px-4 mt-2" style="border-radius: 40px;"><a href="https://github.com/AlvianMaulanaMansyur/BaliNirvanaComputer" target="__blank" style="text-decoration: none; color:#fff;">Github</a></button>
+            <button class="btn btn1 px-4 mt-2"  style="border-radius: 40px;"><a href="http://ecommerce.lab-trpl.id/" target="__blank" style="text-decoration: none; color:#fff;">Live Demo!</a></button>
+          </div>
+        </div>
+    </div>
+  </div>
+  <!-- PORTOFOLIO end -->
+
+  <!-- CONTACT Start -->
+  <div class="contact text-white text-center">
+      <h5>CONTACT</h5>
+      <h1>Interested Work With Me?</h1>
+      <div class="detail  d-flex">
+        <i class="fa-regular fa-envelope mt-3" style="color: #ffffff;"></i>
+        <div class="email text-start">
+            <p class="mt-3">Email</p>
+            <p>alvianmaulana0704@gmail.com</p>
+        </div>
+        <div class="pt-4">
+          <button class="btn btn2">DOWNLOAD CV</button>
+        </div>
+        <div class="pt-3">
+        <a href="https://linkedin.com/in/alvian-maulana-1118652b0" style="margin-left: 6rem;" target="_blank"><i class="fa-brands fa-linkedin me-3"
+          style="color:#fff;"></i></a>
+        <a href="https://github.com/AlvianMaulanaMansyur" target="_blank"><i class="fa-brands fa-github "
+          style="color: #fff;"></i></a>
+        </div>
+      </div>
+  </div>
+  <!-- Contact END -->
 
 
+  <footer class="footer  text-center">
+    <p style=" opacity: 50%;">&copy; 2024 Alvian Maulana Mansyur. All rights reserved.</p>
+  </footer>
+
+  <script src="main.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
-<script src="main.js"></script>
 
 </html>
