--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
         <h1>AL<span>VIAN</span>
           <br>MAULANA
         </h1>
-        <h4>I’m a Web Design</h4>
+        <div class="konten-kata">
+          <span class="kata first-text">I’m a </span> 
+          <span class="kata sec-text"></span>
+        </div>
       </div>
       <div class="mt-5 button">
         <button class="btn btn1 me-3">CONTACT INFO</button>
@@ -151,7 +154,7 @@
   <!-- PORTOFOLIO end -->
 
   <!-- CONTACT Start -->
-  <div class="contact text-white text-center">
+  <div class="contact text-white text-center align-items-center">
       <h5>CONTACT</h5>
       <h1>Interested Work With Me?</h1>
       <div class="detail  d-flex">
@@ -175,9 +178,11 @@
 
 
   <footer class="footer  text-center">
-    <p style=" opacity: 50%;">&copy; 2024 Alvian Maulana Mansyur. All rights reserved.</p>
+    <p style=" opacity: 50%;">&copy; 2024 Vian.dev. All rights reserved.</p>
   </footer>
-
+  <script>
+    
+  </script>
   <script src="main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
