--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
       <div class="list">
         <ul>
           <li><a href="#"> HOME</a></li>
-          <li><a href="#"> ABOUT</a></li>
-          <li><a href="#"> PORTOFOLIO</a></li>
-          <li><a href="#"> CONTACT</a></li>
+          <li><a href="#about"> ABOUT</a></li>
+          <li><a href="#portofolio"> PORTOFOLIO</a></li>
+          <li><a href="#contact"> CONTACT</a></li>
         </ul>
       </div>
     </div>
@@ -74,12 +74,12 @@
 
 
   <!-- ABOUT Section start -->
-  <div class="about container-fluid">
-    <div class="content">
+  <div class="about container-fluid" id="about">
+
       <div class="about-pict">
         <img src="assets/about.jpg" alt="">
       </div>
-    </div>
+    
     <div class="text ">
       <h5>Get To Know More</h5>
       <h1>ABOUT ME</h1>
@@ -134,7 +134,7 @@
   <!-- TECT STACK end -->
 
   <!-- PORTOFOLIO START -->
-  <div class="portofolio mt-5">
+  <div class="portofolio mt-5" id="portofolio">
     <div class="teks">
       <h5>THIS IS MY</h5>
       <h1>PORTOFOLIO</h1>
@@ -144,7 +144,7 @@
         <div class="detail text-center">
           <p>Bali Nirvna Computer  E-Commerce</p>
           <p>"Bali Nirvana Computer" is an e-commerce website created to reach a wider range of buyers and enhance sales effectiveness. This website sells various electronic products ranging from laptops, computers, printers, ink, etc.</p>
-          <div class="d-flex justify-content-center gap-4">
+          <div class="tombol d-flex justify-content-center gap-4">
             <button class="btn btn1 px-4 mt-2" style="border-radius: 40px;"><a href="https://github.com/AlvianMaulanaMansyur/BaliNirvanaComputer" target="__blank" style="text-decoration: none; color:#fff;">Github</a></button>
             <button class="btn btn1 px-4 mt-2"  style="border-radius: 40px;"><a href="http://ecommerce.lab-trpl.id/" target="__blank" style="text-decoration: none; color:#fff;">Live Demo!</a></button>
           </div>
@@ -154,10 +154,10 @@
   <!-- PORTOFOLIO end -->
 
   <!-- CONTACT Start -->
-  <div class="contact text-white text-center align-items-center">
+  <div class="contact text-white text-center align-items-center container " id="contact">
       <h5>CONTACT</h5>
       <h1>Interested Work With Me?</h1>
-      <div class="detail  d-flex">
+      <div class="detail  d-flex  flex-wrap ">
         <i class="fa-regular fa-envelope mt-3" style="color: #ffffff;"></i>
         <div class="email text-start">
             <p class="mt-3">Email</p>
