responsvie-to-laptop

--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@
 
 
   <!-- ABOUT Section start -->
-  <div class="about container-fluid" id="about">
+  <div class="about container-fluid " id="about">
 
-      <div class="about-pict">
+      <div class="about-pict col-2">
         <img src="assets/about.jpg" alt="">
       </div>
     
-    <div class="text ">
-      <h5>Get To Know More</h5>
-      <h1>ABOUT ME</h1>
+    <div class="text container col">
+      <h5 class="text-center">Get To Know More</h5>
+      <h1 class="text-center">ABOUT ME</h1>
       <br>
       <h4>I am a Software Engineering student living in Indonesia, especeally in Bali. I am someone with a passion for
         programming. I have a solid knowledge of HTML, CSS, Javascript, PHP, and some frameworks like CodeIgniter 3 and
