--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
   <!-- ABOUT Section start -->
   <div class="about container-fluid " id="about">
 
-      <div class="about-pict">
-        <img src="assets/about.jpg" alt="">
-      </div>
-    
+    <div class="about-pict">
+      <img src="assets/about.jpg" alt="">
+    </div>
+
     <div class="text ">
       <h5>Get To Know More</h5>
       <h1>ABOUT ME</h1>
@@ -139,35 +139,42 @@
       <h5>THIS IS MY</h5>
       <h1>PORTOFOLIO</h1>
     </div>
-    <div class="project d-flex mt-5">
-      <img src="assets/ecommerce.JPG" alt="">
-      <div class="detail text-center">
-        <p>Bali Nirvna Computer E-Commerce</p>
-        <p>"Bali Nirvana Computer" is an e-commerce website created to reach a wider range of buyers and enhance sales
-          effectiveness. This website sells various electronic products ranging from laptops, computers, printers, ink,
-          etc.</p>
-        <div class="tombol d-flex justify-content-center gap-4">
-          <button class="btn btn1 px-4 mt-2" style="border-radius: 40px;"><a
-              href="https://github.com/AlvianMaulanaMansyur/BaliNirvanaComputer" target="__blank"
-              style="text-decoration: none; color:#fff;">Github</a></button>
-          <button class="btn btn1 px-4 mt-2" style="border-radius: 40px;"><a href="http://ecommerce.lab-trpl.id/"
-              target="__blank" style="text-decoration: none; color:#fff;">Live Demo!</a></button>
+    <div class="card py-5 ">
+      <div class="project d-flex mt-5 ">
+        <img src="assets/ecommerce.JPG" alt="">
+        <div class="detail text-center">
+          <p>Bali Nirvna Computer E-Commerce</p>
+          <p>"Bali Nirvana Computer" is an e-commerce website created to reach a wider range of buyers and enhance sales
+            effectiveness. This website sells various electronic products ranging from laptops, computers, printers,
+            ink,
+            etc.</p>
+          <div class="tombol d-flex justify-content-center gap-4">
+            <button class="btn btn1 px-4 mt-2" style="border-radius: 40px;"><a
+                href="https://github.com/AlvianMaulanaMansyur/BaliNirvanaComputer" target="__blank"
+                style="text-decoration: none; color:#fff;">Github</a></button>
+            <button class="btn btn1 px-4 mt-2" style="border-radius: 40px;"><a href="http://ecommerce.lab-trpl.id/"
+                target="__blank" style="text-decoration: none; color:#fff;">Live Demo!</a></button>
+          </div>
         </div>
       </div>
     </div>
-    <div class="project d-flex mt-5">
-      <img src="assets/GemarBerbagi.JPG" alt="">
-      <div class="detail text-center">
-        <p>Gemar Berbagi Website</p>
-        <p>"Gemar Berbagi" is a landing page website that can be used as a charity platform created to help our friends
-          out there achieve their dreams through the kindness we show by donating.</p>
-        <div class="tombol d-flex justify-content-center gap-4">
-          <button class="btn btn1 px-4 mt-2" style="border-radius: 40px;"><a
-              href="https://github.com/AlvianMaulanaMansyur/GemarBerbagi" target="__blank"
-              style="text-decoration: none; color:#fff;">Github</a></button>
-          <button class="btn btn1 px-4 mt-2" style="border-radius: 40px;"><a
-              href="https://alvianmaulanamansyur.github.io/GemarBerbagi/" target="__blank"
-              style="text-decoration: none; color:#fff;">Live Demo!</a></button>
+
+    <div class="card py-5 mt-2 ">
+      <div class="project d-flex mt-5">
+        <img src="assets/GemarBerbagi.JPG" alt="">
+        <div class="detail text-center">
+          <p>Gemar Berbagi Website</p>
+          <p>"Gemar Berbagi" is a landing page website that can be used as a charity platform created to help our
+            friends
+            out there achieve their dreams through the kindness we show by donating.</p>
+          <div class="tombol d-flex justify-content-center gap-4">
+            <button class="btn btn1 px-4 mt-2" style="border-radius: 40px;"><a
+                href="https://github.com/AlvianMaulanaMansyur/GemarBerbagi" target="__blank"
+                style="text-decoration: none; color:#fff;">Github</a></button>
+            <button class="btn btn1 px-4 mt-2" style="border-radius: 40px;"><a
+                href="https://alvianmaulanamansyur.github.io/GemarBerbagi/" target="__blank"
+                style="text-decoration: none; color:#fff;">Live Demo!</a></button>
+          </div>
         </div>
       </div>
     </div>
