fixing photo does'nt appear

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
     <div class="card py-5 mt-2 ">
       <div class="project d-flex mt-5">
-        <img src="assets/GemarBerbagi.JPG" alt="">
+        <img src="assets/GemarBerbagi.jpeg" alt="">
         <div class="detail text-center">
           <p>Gemar Berbagi Website</p>
           <p>"Gemar Berbagi" is a landing page website that can be used as a charity platform created to help our
