--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </nav>
 
   <!-- profile section start -->
-  <div class="container greetings justify-content-start">
+  <div class="container greetings">
     <div class="content">
       <div class="text-white">
         <h4 class="">Hi, my name is</h4>
@@ -150,6 +150,17 @@
           </div>
         </div>
     </div>
+    <div class="project d-flex mt-5">
+      <img src="assets/Capture.JPG" alt="">
+      <div class="detail text-center">
+        <p>Adi Abian Vila Booking</p>
+        <p>"Adi Abian Villa Booking is a website that make tourist make their room booking ease. </p>
+        <div class="tombol d-flex justify-content-center gap-4">
+          <button class="btn btn1 px-4 mt-2" style="border-radius: 40px;"><a href=https://github.com/AlvianMaulanaMansyur/AdiAbianVilla" target="__blank" style="text-decoration: none; color:#fff;">Github</a></button>
+          <button class="btn btn1 px-4 mt-2"  style="border-radius: 40px;"><a href="#" target="__blank" style="text-decoration: none; color:#fff;">Live Demo!</a></button>
+        </div>
+      </div>
+  </div>
   </div>
   <!-- PORTOFOLIO end -->
 
